# hardware

./: .env.example  .gitignore
docs/: _config.yml  index.md
docs/projects/: picobook.md
documentation/: xiao_seeed_esp32c3.txt
esp_projects/espnow/: CMakeLists.txt  README.md  sdkconfig.old
esp_projects/espnow/main/: CMakeLists.txt  main_rx.cpp  main_tx.cpp
esp_projects/init/: CMakeLists.txt
esp_projects/init/main/: main.cpp
esp_projects/rf_esp32c/: CMakeLists.txt  README.md  RF.md  sdkconfig.old
esp_projects/rf_esp32c/main/: main.cpp
portfolio_ready/pico_book/: README.md
projects/: flash-and-detach.sh  flash.sh
projects/OLED_1/: CMakeLists.txt  oled.c
projects/OTA_1/: CMakeLists.txt  CMakeLists.txt.bak  README.md  main.cpp  wifi_manager.cpp
projects/PicoBook/: README.md  aws_server.sh  boot.py  example.secrets.py  main.py  server.php
projects/PicoBook/docs/: wiring_diagram.md
projects/Wifi_Test_1/: CMakeLists.txt  main.c  project.env
projects/Wifi_Test_2/: CMakeLists.txt  main.c  project.env
projects/Wifi_Test_3/: README.md  _main.py  boot.py  main.py  server.php
projects/Wifi_Test_4/: CMakeLists.txt  README.md  main.c
projects/Wifi_Test_5/: CMakeLists.txt  README.md  main.cpp  wifi_manager.cpp
projects/Wifi_Test_6/: CMakeLists.txt  README.md
projects/Wifi_Test_7/: CMakeLists.txt  README.md  main.cpp
projects/pico-libs/pico-ssd1306/: CMakeLists.txt
projects/propel/analyze/: possible_clock.dsl  possible_clock_2.dsl  speed_btn_change_8.dsl  test_one.dsl
projects/templates/CPP_WiFi_v1/: CMakeLists.txt  README.md  bootstrap.sh  wifi_manager.cpp  wifi_manager.hpp
toolchains/: README.md
